--- a/components/article/styles.module.scss
+++ b/components/article/styles.module.scss
@@ -36,9 +36,12 @@
         height: 60px;
         background-color: rgba(0, 208, 148, 1);
         border-radius: 8px;
+
         > button {
             background: none;
             border: none;
+            font-size: 16px;
+            font-weight: 600;
         }
     }
     }
