--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -30,12 +30,16 @@
 				font-size: 16px;
 				font-weight: 400;
 			}
+			
 			& select {
 				background: none;
 				border: none;
 				color: white;
 				font-size: 16px;
 				font-weight: 400;
+				> option {
+					background: gray;
+				}
 			}
 		}
 .header_button {
@@ -51,7 +55,9 @@
 		> button {
 				background: none;
 				border: none;
-				padding: 12px 24px;			
+				padding: 12px 24px;
+				font-size: 16px;
+				font-weight: 600;			
 		}
 	}
 }
@@ -65,4 +71,3 @@
 		height: 150px;
 	}
 }
-// }
