--- a/components/main/biTrade-bonuses/style.module.scss
+++ b/components/main/biTrade-bonuses/style.module.scss
@@ -12,7 +12,7 @@
             color: rgba(0, 208, 148, 1);
         }
     }
-        & .trade_bonuses_text {
+        &_text {
             display: flex;
             column-gap: 20px;
             > span {
