--- a/components/main/choose-section/style.module.scss
+++ b/components/main/choose-section/style.module.scss
@@ -5,7 +5,7 @@
     background-color: #10241FFF;
     padding: 7rem 8rem;
 
-    .choose_title {
+    &_title {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
