--- a/components/main/news-letter/style.module.scss
+++ b/components/main/news-letter/style.module.scss
@@ -14,7 +14,7 @@
     column-gap: 80px;
     padding: 22px 0;
 
-    .news_icon {
+    &_icon {
        width: 32%; 
        height: 281px;
        display: flex;
