--- a/components/article/styles.module.scss
+++ b/components/article/styles.module.scss
@@ -3,12 +3,12 @@
     justify-content: space-between;
     column-gap: 20px;
 
-    & .trading_texture {
+    &_texture {
         display: flex;
         flex-direction: column;
         row-gap: 30px;
 
-        .trading_texture_text {
+        &_text {
             display: flex;
             flex-direction: column;
             row-gap: 8px;
@@ -28,7 +28,7 @@
             opacity: 60%;
         }
     }
-    .trading_texture_button {
+    &_button {
         display: flex;
         align-items: center;
         justify-content: center;
