--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -3,7 +3,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 3rem 8rem !important;
-.header_logo { 
+	&_logo { 
 	width: 275px;
 	height: 48px;
 
@@ -13,15 +13,15 @@
 }
 }
 
-> .header_nav {
+	 &_nav {
 		display: flex;
 		align-items: center;
 		column-gap: 40px;
 
 		nav {
-			column-gap: 25px;
 			display: flex;
 			align-items: center;
+			column-gap: 25px;
 			
 			> a {
 				text-decoration: none;
@@ -31,7 +31,7 @@
 				font-weight: 400;
 			}
 			
-			& select {
+			>select {
 				background: none;
 				border: none;
 				color: white;
