--- a/components/main/feature-section/styles.module.scss
+++ b/components/main/feature-section/styles.module.scss
@@ -5,7 +5,7 @@
     color: white;
     column-gap: 30px;
 
-    .feature_texture {
+    &_texture {
         display: flex;
         flex-direction: column;
         justify-content: center;
