--- a/components/main/feature-section/styles.module.scss
+++ b/components/main/feature-section/styles.module.scss
@@ -3,27 +3,93 @@
     justify-content: space-between;
     align-items: center;
     color: white;
-    column-gap: 30px;
+    column-gap: 50px;
+
+    > img {
+        width: 600px;
+        height: 315px;
+    }
 
     &_texture {
         display: flex;
         flex-direction: column;
         justify-content: center;
         row-gap: 30px;
+        text-transform: capitalize;
 
         > h3 {
             font-weight: 600;
-            font-size: 48px;
+            font-size: 40px;
+            margin: 0;
         }
         .feature_columns {
             display: flex;
             flex-direction: column;
+            row-gap: 20px;
 
-            > .feature_row {
+            &_row {
                 display: flex;
                 column-gap: 16px;
+
+                &_item {
+                    display: flex;
+                    flex-direction: column;
+                    row-gap: 10px;
+                    > span {
+                        font-weight: 600;
+                        font-size: 24px;
+                        color: rgba(255, 255, 255, 1);
+                    }
+                    > p {
+                        font-weight: 400;
+                        font-size: 16px;
+                        color: rgba(255, 255, 255, 0.6);
+                        margin: 0;
+                    }
+                }
+            }
+            &_button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 40px auto;
+                background: rgba(0, 208, 148, 1);
+                border-radius: 8px;
+                width: 160px;
+                height: 48px;
+                > button {
+                    color: rgba(12, 38, 58, 1);
+                    font-weight: 600;
+                    font-size: 16px;
+                    background: none;
+                    border: none;
+                }
             }
         }
     }
 
+}
+@media screen and (max-width: 900px) {
+    .feature {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        > img {
+            width: 100%;
+        }
+    }
+    
+}
+@media screen and (min-width: 992px) and (max-width: 1190px) {
+    .feature {
+        > img {
+            width: 80%;
+        }
+        &_texture {
+            > h3 {
+                font-size: 36px;
+            }
+        }
+    }
+    
 }
