--- a/components/footer/style.module.scss
+++ b/components/footer/style.module.scss
@@ -109,7 +109,8 @@
     }
     .border {
         border-top: 1px solid rgba(153, 161, 159, 1);
-        margin: 40px auto;
+        margin: auto;
+        margin-top: 40px;
         padding-bottom: 40px;
         text-align: center;
     }
