--- a/App.css
+++ b/App.css
@@ -17,3 +17,8 @@ button:hover, a:hover, select:hover {
 	color: orange !important;
 	cursor: pointer !important;
 }
+@media only screen and (max-width: 992px) {
+	.container-spacing {
+		padding: 3rem !important;
+	}
+}
