--- a/components/main/choose-section/style.module.scss
+++ b/components/main/choose-section/style.module.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     text-align: center;
     background-color: #10241FFF;
-    padding: 7rem 8rem;
 
     &_title {
         display: flex;
@@ -25,23 +24,23 @@
     > .crypto_change {
         display: flex;
         flex-direction: column;
-        width: 60%;
+        width: 100%;
         margin: auto;
         margin-top: 60px;
 
         .crypto_change_column {
+            width: 100%;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            column-gap: 80px;
 
             > button {
                 border: 1px solid rgba(70, 89, 74, 1);
                 background: rgba(12, 32, 27, 1);
                 color: white;
-                width: 100%;
+                width: 250px;
                 height: 58px;
-                padding: 0 70px;
+                margin: auto;
                 border-radius: 5px;
                 font-weight: 400;
                 font-size: 25px;
@@ -50,6 +49,75 @@
                 width: 100px;
                 height: 100px;
             }
+        }
+    }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1190px) {
+    .choose {
+        &_title {
+            height: 250px;
+
+            > h1 {
+                font-size: 40px;
+            }
+        }
+
+        > .crypto_change {
+            width: 100%;
+            margin-top: 40px;
+
+            > .crypto_change_column > button {
+                width: 220px;
+            }
+        }
+    }
+}
+@media only screen and (min-width: 700px) and (max-width: 991px) {
+    .choose {
+        &_title {
+            height: 250px;
+            > h1 {
+                font-size: 40px;
+            }
+        }
+
+        > .crypto_change {
+            width: 100%;
+            margin-top: 40px;
+
+            > .crypto_change_column > button {
+                width: 220px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 699px) {
+    .choose {
+
+        &_title {
+            height: 180px;
+            > h1 {
+                font-size: 25px;
+            }
+        }
+
+        > .crypto_change {
+            width: 100%;
+            margin-top: 50px;
+
+            > .crypto_change_column {
+                flex-direction: column;
+                row-gap: 30px;
+                
+                :first-child {
+                    order: 2;
+                }
+                
+             > button {
+                width: 220px;
+            }
+        }
         }
     }
 }
