--- a/components/main/feature-section/styles.module.scss
+++ b/components/main/feature-section/styles.module.scss
@@ -29,6 +29,7 @@
 
             &_row {
                 display: flex;
+                align-items: center;
                 column-gap: 16px;
 
                 &_item {
@@ -69,27 +70,50 @@
     }
 
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 991px) {
     .feature {
         flex-direction: column;
         align-items: center;
         text-align: center;
-        > img {
-            width: 100%;
-        }
-    }
-    
-}
-@media screen and (min-width: 992px) and (max-width: 1190px) {
-    .feature {
+        row-gap: 30px;
+
         > img {
             width: 80%;
         }
+
         &_texture {
+            width: 80%;
+            row-gap: 45px;
+            margin-top: 30px;
+
             > h3 {
-                font-size: 36px;
+                font-size: 28px;
             }
         }
     }
     
+}
+
+@media screen and (min-width: 992px) and (max-width: 1190px) {
+    .feature {
+       
+        > img {
+            width: 55%;
+        }
+        &_texture {
+            text-align: center;
+           
+            > h3 {
+                font-size: 30px;
+            }
+            .feature_columns {
+                &_row {
+                    display: flex;
+                    flex-direction: column;
+                    row-gap: 15px;
+            }
+        }
+    }
+    
+}
 }
