--- a/components/main/news-letter/style.module.scss
+++ b/components/main/news-letter/style.module.scss
@@ -1,12 +1,12 @@
 .newsSection {
     position: relative;
-    top: -120px;
+    top: -130px;
     width: 60%;
     background-color: rgba(0, 208, 148, 1);
     padding: 0 60px;
     border-radius: 24px;
     margin: 0 auto;
-
+		opacity: 60%;
 .news {
     display: flex;
     justify-content: space-evenly;
@@ -26,13 +26,6 @@
         
     }
 }
-
-    &h2 {
-        color: white;
-        font-weight: 600;
-        font-size: 48px;
-        text-align: center;
-    }
     > .news_column {
         width: 60%;
         display: flex;
@@ -73,12 +66,59 @@
             width: 28%;
             height: 60px;
             background: #0A4FD5FF;
-            color: white;
-            padding: 14px 32px;
             border: none;
             border-radius: 8px;
+
+						> a {
+							color: white;
+							text-decoration: none;
+							font-weight: 600;
+							font-size: 16px;
+						}
         }
     }
     }
 }
+}
+@media only screen and (min-width: 900px) and (max-width: 1199px) {
+    .newsSection {
+			top: -90px;
+        .news {
+            column-gap: 40px;
+						padding: 0;
+            &_icon {
+                width: 50%; 
+                height: 281px;
+            }
+             .news_column {
+                width: 60%;
+							.news_text {
+
+							> h2 {
+									font-size: 30px;
+							}
+							> p {
+									font-size: 14px;
+							}
+						}
+						.form {
+
+							> input {
+									width: 60%;
+									height: 40px;
+							}
+							> button {
+								width: 35%;
+								height: 40px;
+								> a {
+									text-align: center;
+									font-size: 14px;
+									font-weight: 500;
+								}
+							}
+						}
+        	}
+
+        }
+    }
 }
