--- a/components/footer/style.module.scss
+++ b/components/footer/style.module.scss
@@ -67,29 +67,6 @@
             }
         }
     }
-    @media only screen and (min-width: 900px) and (max-width: 1065px) {
-        &_row {
-            column-gap: 20px;
-            &_column {
-                &_text {
-                    width: 80%;
-                }
-                > .footer_logo {
-                    > img:first-child {
-                        width: 200px;
-                        height: 50px;
-                    }
-                    > img:last-child {
-                        width: 120px;
-                        height: 50px;
-                    }
-                }
-            }
-            &_links {
-                column-gap: 40px;
-            }
-        }
-    }
     .footer_contact {
         display: flex;
         column-gap: 20px;
@@ -97,13 +74,14 @@
          > a {
             width: 24px;
             height: 24px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
             > img {
                 max-width: 100%;
                 width: 20px;
                 height: 16px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
             }
          }
     }
@@ -113,5 +91,65 @@
         margin-top: 40px;
         padding-bottom: 40px;
         text-align: center;
+    }
+}
+@media only screen and (max-width: 899px) {
+    .footer {
+        padding: 0 5rem;
+    
+    &_row {
+        row-gap: 20px;
+        flex-direction: column;
+        &_column {
+            &_text {
+                width: 100%;
+            }
+            > .footer_logo {
+                > img:first-child {
+                    width: 210px;
+                    height: 50px;
+                }
+                > img:last-child {
+                    width: 100px;
+                    height: 50px;
+                }
+            }
+        }
+        &_links {
+            column-gap: 40px;
+            justify-content: space-between;
+        }
+        &_contact {
+            margin-top: 10px;
+        }
+    }
+    }
+}
+@media only screen and (min-width: 900px) and (max-width: 1065px) {
+    .footer {
+        padding: 0 6rem;
+
+        &_row {
+        column-gap: 20px;
+
+        &_column {
+            &_text {
+                width: 80%;
+            }
+            > .footer_logo {
+                > img:first-child {
+                    width: 200px;
+                    height: 50px;
+                }
+                > img:last-child {
+                    width: 120px;
+                    height: 50px;
+                }
+            }
+        }
+        &_links {
+            column-gap: 40px;
+        }
+    }
     }
 }
