--- a/components/main/news-letter/style.module.scss
+++ b/components/main/news-letter/style.module.scss
@@ -6,7 +6,7 @@
     padding: 0 60px;
     border-radius: 24px;
     margin: 0 auto;
-		opacity: 60%;
+	opacity: 80%;
 .news {
     display: flex;
     justify-content: space-evenly;
@@ -80,9 +80,53 @@
     }
 }
 }
+@media only screen and (max-width: 899px) {
+    .newsSection {
+			top: -70px;
+            padding: 0 40px;
+        .news {
+            column-gap: 40px;
+			padding: 0;
+            &_icon {
+                width: 40%; 
+                height: 281px;
+            }
+             .news_column {
+                width: 60%;
+                .news_text {
+
+                > h2 {
+                        font-size: 24px;
+                }
+                > p {
+                        font-size: 12px;
+                }
+                }
+                .form {
+
+                    > input {
+                        width: 60%;
+                        height: 40px;
+                    }
+                    > button {
+                        width: 35%;
+                        height: 40px;
+                        > a {
+                            text-align: center;
+                            font-size: 13px;
+                            font-weight: 500;
+                        }
+                    }
+                }
+        	}
+
+        }
+    }
+}
 @media only screen and (min-width: 900px) and (max-width: 1199px) {
     .newsSection {
 			top: -90px;
+            padding: 0 50px;
         .news {
             column-gap: 40px;
 						padding: 0;
@@ -102,11 +146,6 @@
 							}
 						}
 						.form {
-
-							> input {
-									width: 60%;
-									height: 40px;
-							}
 							> button {
 								width: 35%;
 								height: 40px;
