--- a/components/main/biTrade-bonuses/style.module.scss
+++ b/components/main/biTrade-bonuses/style.module.scss
@@ -26,6 +26,41 @@
                 margin-top: 13px;
             }
         }
+        &_form {
+            margin-left: 9%;
+            width: 60%;
+            display: flex;
+            align-items: center;
+            position: relative;
+
+            > input {
+                width: 100%;
+                height: 50px;
+                background-color: rgba(217, 217, 217, 0.1);
+                border: none;
+                border-radius: 10px;
+
+            }
+            > button {
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                border: none;
+                background: none;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 0 10px 10px 0;
+                width: 50px;
+                height: 50px;
+
+                > img {
+                    width: 24px;
+                    height: 24px;
+                }
+            }
+        }
 
         .swiper_container {
             display: flex;
