changes news-letter file

--- a/components/article/styles.module.scss
+++ b/components/article/styles.module.scss
@@ -79,6 +79,10 @@
         &_button {
             margin: auto;
         }
+       
+    }
+    .channel {
+        padding-bottom: 4rem;
     }
 }
 }
