--- a/components/footer/style.module.scss
+++ b/components/footer/style.module.scss
@@ -1,5 +1,5 @@
 .footer {
-    padding: 0 8rem;
+    padding: 5rem 8rem;
     color: white;
 
     &_content {
@@ -95,7 +95,7 @@
 }
 @media only screen and (max-width: 899px) {
     .footer {
-        padding: 0 5rem;
+        padding: 4rem 5rem;
     
     &_row {
         row-gap: 20px;
@@ -127,7 +127,7 @@
 }
 @media only screen and (min-width: 900px) and (max-width: 1065px) {
     .footer {
-        padding: 0 6rem;
+        padding: 4rem 6rem;
 
         &_row {
         column-gap: 20px;
