--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 3rem 8rem !important;
+	padding: 3rem 8rem;
 
 	&_logo { 
 	width: 275px;
@@ -64,7 +64,20 @@
 }
 
 }
+@media only screen and (max-width: 768px) {
+	.header {
+		padding: 3rem;
 
+		&_logo {
+			width: 210px;
+			height: 50px;
+		}
+		
+		&_nav {
+			display: none;
+		}
+	}
+}
 .channel {
 	width: 350px;
 	height: 150px;
