--- a/components/about/style.module.scss
+++ b/components/about/style.module.scss
@@ -11,20 +11,6 @@
         text-align: center;
         row-gap: 20px;
 
-        &_content_title {
-            background-color: rgba(0, 21, 15, 1);
-            width: 100%;
-            height: 259px;
-            display: flex;
-            align-items: center;
-            justify-content: start;
-            > p {
-                padding-left: 8rem;
-                font-weight: 600;
-                font-size: 48px;
-                color: rgba(255, 255, 255, 1);
-            }
-        }
         &_column {
             display: flex;
             flex-direction: column;
@@ -69,18 +55,10 @@
             
         }
     }
-    }
     @media only screen and (max-width: 768px) {
-        &_container {
-            &_content_title {
-                height: 200px;
-                > p {
-                    padding-left: 3rem;
-                }
-            }
-            &_column {
-                padding: 5rem 3rem;
+         &_column {
+            padding: 5rem 3rem !important;
             }
         }
     }
-}
+   }
