--- a/components/error/style.module.scss
+++ b/components/error/style.module.scss
@@ -1,28 +1,15 @@
 .error {
 display: flex;
 flex-direction: column;
-&_title {
-    background-color: rgba(0, 21, 15, 1);
-        width: 100%;
-        height: 259px;
-        display: flex;
-        align-items: center;
-        justify-content: start;
-        > p {
-            padding-left: 8rem;
-            font-weight: 600;
-            font-size: 48px;
-            color: rgba(255, 255, 255, 1);
-        }      
-    }
+
     &_container {
         background: white;
         height: auto;
-        padding: 100px 8rem;
 
         &_content {
             background: rgba(245, 247, 252, 1);
             height: auto;
+            padding: 100px 0;
             margin: 0 auto;
             border-radius: 8px;
 
@@ -35,11 +22,55 @@ flex-direction: column;
                 &_img {
                     width: 100%;
                     height: 378px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     > img {
                         max-width: 100%;
                         height: 378px;
                     }
                 }
+                &_piece {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    row-gap: 40px;
+
+                    &_text {
+                        display: flex;
+                        flex-direction: column;
+                        row-gap: 8px;
+                    > h3 {
+                        font-weight: 600;
+                        font-size: 48px;
+                        text-align: center;
+                        text-transform: capitalize;
+                        margin: 0;
+                        > b {
+                            color: #0A4FD5FF;
+                        }
+                    }
+                    > p {
+                        font-weight: 400;
+                        font-size: 16px;
+                        text-align: center;
+                        color: rgba(69, 82, 91, 1);
+                        padding: 0 40px;
+                    }
+                }
+                &_button {
+                    > button {
+                        background: rgba(0, 208, 148, 1);
+                        border-radius: 8px;
+                        border: none;
+                        height: 48px;
+                        padding: 8px 32px;
+                        font-weight: 600;
+                        font-size: 16px;
+                        color: black;
+                    }
+                }
+            }
             }
         }
     }
